master: Last slides added

--- a/presentation.html
+++ b/presentation.html
@@ -379,7 +379,7 @@ class SpaceShuttle extends JumboJet
             <section>
                 <header>
                     <h3><span style="font-size: 85%">Weakening Postconditions</span></h3>
-                    <small></small>
+                    <small>Eg: This slide having no remark</small>
                 </header>
                 <article>
                     <pre><code class="php" data-trim data-noescape>
@@ -417,7 +417,7 @@ class Launcher
             <section>
                 <header>
                     <h3><span style="font-size: 85%">History Constraint</span></h3>
-                    <small>Feel free to panic on spotting new clouds on the horizon</small>
+                    <small>Clouds on the horizon? Panic!</small>
                 </header>
                 <article>
                     <pre><code class="php" data-trim data-noescape>
@@ -489,10 +489,6 @@ class SolarPoweredEngine extends JetEngine
         </section>
 
 
-
-
-
-
         <!-- DIP -->
         <section>
             <section class="with-clouds">
@@ -507,7 +503,7 @@ class SolarPoweredEngine extends JetEngine
             <section>
                 <header>
                     <h3>Tight coupling</h3>
-                    <small>Extends is evil</small>
+                    <small>Please, no monogamy!</small>
                 </header>
                 <article>
                     <pre><code class="php" data-trim data-noescape>
@@ -543,7 +539,7 @@ class Origami
             <section>
                 <header>
                     <h3>Abstract classes</h3>
-                    <small>Abstract not abstract enough?</small>
+                    <small>Abstract classes are not abstract enough</small>
                 </header>
                 <article>
                     <pre><code class="php" data-trim data-noescape>
@@ -572,7 +568,6 @@ class Origami extends AirplaneFactory
         // ...
     }
 }
-
                     </code></pre>
                 </article>
                 <aside class="notes">
@@ -582,11 +577,29 @@ class Origami extends AirplaneFactory
                 </aside>
             </section>
 
+            <section>
+                <header>
+                    <h3>Other examples</h3>
+                    <small>Repeat: Its not all about code</small>
+                </header>
+                <article>
+                    <ul>
+                        <li>Waterfall vs Agile</li>
+                        <li class="fragment">RAM memory in most laptops</li>
+                    </ul>
+                </article>
+                <aside class="notes">
+                    <ul>
+                        <li>Waterfall: all steps are tightly coupled</li>
+                    </ul>
+                </aside>
+            </section>
+
             <section class="with-clouds">
                 <article>
                     <header>
                         <h3>Dependency Inversion Summary</h3>
-                        <small></small>
+                        <small>Improper use of abstraction hurts</small>
                     </header>
                 </article>
                 <aside class="notes">
@@ -617,7 +630,7 @@ class Origami extends AirplaneFactory
             <section id="further-reading">
                 <header>
                     <h3>Further reading</h3>
-                    <small></small>
+                    <small>Yeah, right&hellip;</small>
                 </header>
                 <article>
                     <ol class="references">
